Update Input layer

--- a/app/styles/screen.module.scss
+++ b/app/styles/screen.module.scss
@@ -1,4 +1,6 @@
 .canvas {
   background-color: black;
-  border: 1px solid #ffffff;
+  border-radius: 10px;
+  box-shadow: 0em 1em 2em 1em #afafaf;
+  margin: 2em;
 }
