--- a/app/styles/screen.module.scss
+++ b/app/styles/screen.module.scss
@@ -1,6 +1,6 @@
 .canvas {
   background-color: black;
   border-radius: 10px;
-  box-shadow: 0em 1em 2em 1em #afafaf;
+  box-shadow: 0 1em 2em 1em #afafaf;
   margin: 2em;
 }
