--- a/app/styles/functionList.module.scss
+++ b/app/styles/functionList.module.scss
@@ -19,7 +19,19 @@
   .functionHandler {
     display: flex;
     flex-direction: row;
-    padding-left: 40px;
+    padding-left: 100px;
+
+    .runBtn {
+      margin-right: 20px;
+      margin-top: 30px;
+      border: 0;
+      border-radius: 20px;
+      width: 40px;
+      height: 40px;
+      background-color: #0a66c9;
+      color: #ffffff;
+      font-size: 1.4em;
+    }
 
     .delBtn {
       margin-top: 30px;
