--- a/app/styles/functionList.module.scss
+++ b/app/styles/functionList.module.scss
@@ -16,32 +16,59 @@
     font-size: 1.4em;
   }
 
+  .runBtn {
+    margin-right: 20px;
+    margin-top: 30px;
+    border: 0;
+    border-radius: 20px;
+    width: 40px;
+    height: 40px;
+    background-color: #0a66c9;
+    color: #ffffff;
+    font-size: 1.4em;
+  }
+  .delBtn {
+    margin-top: 30px;
+    border: 0;
+    border-radius: 20px;
+    width: 40px;
+    height: 40px;
+    background-color: #b05757;
+    color: #ffffff;
+    font-size: 1.4em;
+  }
+
+  .menu {
+    width: 100px;
+    height: 40px;
+    border: 0;
+    border-radius: 20px;
+    background-color: #0a66c9;
+    color: #ffffff;
+    text-align: center;
+    font-size: 1.2em;
+    font-family: 'Cambria Math', 'Consolas', serif;
+    margin-right: 1em;
+  }
+
+  .varMenu {
+    width: 40px;
+    height: 40px;
+    border: 0;
+    border-radius: 20px;
+    background-color: #0a66c9;
+    color: #ffffff;
+    text-align: center;
+    font-size: 1.2em;
+    font-family: 'Cambria Math', 'Consolas', serif;
+  }
+
   .functionHandler {
     display: flex;
     flex-direction: row;
     padding-left: 100px;
 
-    .runBtn {
-      margin-right: 20px;
-      margin-top: 30px;
-      border: 0;
-      border-radius: 20px;
-      width: 40px;
-      height: 40px;
-      background-color: #0a66c9;
-      color: #ffffff;
-      font-size: 1.4em;
-    }
 
-    .delBtn {
-      margin-top: 30px;
-      border: 0;
-      border-radius: 20px;
-      width: 40px;
-      height: 40px;
-      background-color: #b05757;
-      color: #ffffff;
-      font-size: 1.4em;
-    }
+
   }
 }
